@@ -167,18 +167,20 @@ alloc_e_font_it (gchar *face, gdouble size, GtkHTMLFontStyle style, gchar *it)
 
 
 	if (face) {
-		gchar *n1, *n2, *s;
+		gchar *n1, *n2, *n3, *s;
 		gint tsize;
 
 		n1 = font_name_substitute_attr (face, 3, style & GTK_HTML_FONT_STYLE_BOLD ? "bold" : "medium");
 		n2 = font_name_substitute_attr (n1,   4, style & GTK_HTML_FONT_STYLE_ITALIC ? it : "r");
+		n3 = font_name_substitute_attr (n1,   7, "*");
 
-		if (!find_font (n2, size, &tsize, style))
+		if (!find_font (n3, size, &tsize, style))
 			tsize = size;
 		g_free (n1);
-		s    = g_strdup_printf ("%d", tsize);
-		name = font_name_substitute_attr (n2,   7, s);
 		g_free (n2);
+		s    = g_strdup_printf ("%d", tsize);
+		name = font_name_substitute_attr (n3,   7, s);
+		g_free (n3);
 		g_free (s);
 	} else
 		name = g_strdup ("fixed");
